--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/image/logo_shop.jpg
+    - asset/image/news.jpg
     - asset/image/user.png
 
 
