--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.17.0
+  intl_translation:
+    git:
+      url: https://github.com/nt4f04uNd/intl_translation
 
 
 
