--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   intl_translation:
     git:
       url: https://github.com/nt4f04uNd/intl_translation
+  sqflite: any
+  path_provider: any
+  path: ^1.8.0
 
 
 
