add google maps

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
   path_provider: any
   path: ^1.8.0
 
+  dio: ^4.0.0
+  google_maps_flutter: ^2.0.2
+  geolocator: ^7.0.3
+  flutter_polyline_points: ^1.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
