--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cloud_firestore: ^2.4.0
   flutter_signin_button: ^2.0.0
   authentication_provider: ^1.0.1
+  badges: ^2.0.1
 
 
 
@@ -69,9 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - asset/image/logo_shop.jpg
-    - asset/image/news.jpg
-    - asset/image/user.png
+    - asset/image/
     - asset/vinyl_record/
 
 
@@ -86,17 +85,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+   - family: Oxygen
+     fonts:
+      - asset: asset/fonts/Oxygen-Light.ttf
+   - family: Georama
+     fonts:
+      - asset: asset/fonts/Georama-Regular.ttf
+   - family: Atkinson Hyperlegible
+     fonts:
+      - asset: asset/fonts/AtkinsonHyperlegible-Regular.ttf
+
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
