--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_signin_button: ^2.0.0
   authentication_provider: ^1.0.1
   badges: ^2.0.1
+  video_player: ^2.1.12
 
 
 
@@ -71,7 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/image/
-    - asset/vinyl_record/
+    - asset/video/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
