--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
 
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -52,13 +53,17 @@ dependencies:
   badges: ^2.0.1
   video_player: ^2.1.12
   flutter_bloc: ^7.1.0
-
+  freezed: ^0.14.2
+  json_serializable: ^4.1.4
 
 
 dev_dependencies:
   flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
+  build_runner:
+  freezed: ^0.14.2
+  json_serializable:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
