--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   json_serializable: ^4.1.4
   get_it: ^7.2.0
   search_page: ^2.0.0+1
+  golden_toolkit: ^0.10.0
 
 
 dev_dependencies:
