--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   search_page: ^2.0.0+1
   golden_toolkit: ^0.10.0
   get: ^4.3.8
+  bloc_test: ^8.0.2
+  cloud_firestore_mocks: ^0.9.0+1
 
 
 dev_dependencies:
@@ -68,6 +70,9 @@ dev_dependencies:
   build_runner:
   freezed: ^0.14.2
   json_serializable:
+  
+    
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
